--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"bcrypt": "^3.0.6",
 		"chalk": "^2.4.2",
+		"cors": "^2.8.5",
 		"dotenv": "^8.1.0",
 		"ejs": "^2.7.1",
 		"express": "^4.17.1",
